<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/experience"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/experience_title"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:hint="@string/hint_title"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/institute_name_experience"
                android:inputType="textMultiLine"
                android:layout_below="@id/experience_title"
                android:layout_width="match_parent"
                android:hint="@string/hint_institute_name"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/start_date_of_experience"
                android:layout_below="@id/institute_name_experience"
                android:layout_width="match_parent"
                android:hint="@string/hint_start_date"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/end_date_of_experience"
                android:layout_below="@id/start_date_of_experience"
                android:layout_width="match_parent"
                android:hint="@string/hint_end_date"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/save_button_experience"
                android:layout_below="@id/end_date_of_experience"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>