<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/achievement"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/achievement_title"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:hint="@string/hint_title"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/achievement_description"
                android:inputType="textMultiLine"
                android:layout_below="@id/achievement_title"
                android:layout_width="match_parent"
                android:hint="@string/hint_description"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/date_of_achievement"
                android:layout_below="@id/achievement_description"
                android:layout_width="match_parent"
                android:hint="@string/hint_date"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/date_of_achievement"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>